Fix images overflowing their container

--- a/src/content/assets/css/plain.css
+++ b/src/content/assets/css/plain.css
@@ -51,6 +51,11 @@ a
   text-decoration: none;
 }
 
+img
+{
+  max-width: 100%;
+}
+
 pre
 {
   padding: .1em;
